testdata/reject/data.lc
data Data1 = Data1 a b c
-- Data1 :: a -> b -> c -> Data1
-- Data1 :: forall a b c . a -> b -> c -> Data1

